@@ -34,7 +34,6 @@ from PyQt4 import QtGui
 
 import vitables.utils
 import vitables.logger as logger
-import vitables.vtsplash
 
 translate = QtGui.QApplication.translate
 
@@ -129,7 +128,7 @@ class VTGUI(QtGui.QMainWindow):
         # Redirect standard output and standard error to a Logger instance
         sys.stdout = self.logger
         sys.stderr = self.logger
-       # add self.logger as handler of main logger object
+        # add self.logger as handler of main logger object
         vitables_logger = logging.getLogger('vitables')
         stream_handler = logging.StreamHandler(self.logger)
         stream_handler.setFormatter(logging.Formatter(_GUI_LOG_FORMAT))
@@ -521,13 +520,13 @@ class VTGUI(QtGui.QMainWindow):
             self.updateRecentSubmenu)
 
         # Create the Node menu and add actions/submenus/separators to it
-        node_menu = self.menuBar().addMenu(translate('VTGUI', "&Node",
+        self.node_menu = self.menuBar().addMenu(translate('VTGUI', "&Node",
             'The Node menu entry'))
-        node_menu.setObjectName('node_menu')
+        self.node_menu.setObjectName('node_menu')
         node_actions = ['nodeOpen', 'nodeClose', 'nodeProperties', None,
             'nodeNew', 'nodeRename', 'nodeCut', 'nodeCopy', 'nodePaste',
             'nodeDelete']
-        vitables.utils.addActions(node_menu, node_actions, self.gui_actions)
+        vitables.utils.addActions(self.node_menu, node_actions, self.gui_actions)
 
         # Create the Dataset menu and add actions/submenus/separators to it
         self.dataset_menu = self.menuBar().addMenu(
